--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container main-header">
-        <!-- Navigation -->
-
         <nav class="header-navigation main-header">
           <a class="header-logo link" href="./index.html"
             ><span>Web</span>Studio</a
@@ -43,9 +41,6 @@
             </li>
           </ul>
         </nav>
-
-        <!-- Address -->
-
         <address class="header-address">
           <ul class="header-address-list list">
             <li class="header-address-item">
@@ -63,7 +58,7 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
       <!-- Hero -->
 
@@ -118,7 +113,7 @@
 
       <!-- Doing -->
 
-      <section class="section-doing">
+      <!-- <section class="section-doing">
         <div class="container">
           <h2 class="section-doing-title">What are we doing</h2>
           <ul class="section-doing-list list">
@@ -148,11 +143,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Team -->
 
-      <section class="section-team">
+      <!-- <section class="section-team">
         <div class="container">
           <h2 class="section-team-title">Our Team</h2>
           <ul class="section-team-list list">
@@ -320,11 +315,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Customers -->
 
-      <section class="section-customers">
+      <!-- <section class="section-customers">
         <div class="container">
           <h2 class="section-customers-title">Customers</h2>
           <ul class="section-customers-list link list">
@@ -372,13 +367,12 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
-      <!-- Footer -->
 
+    <!-- Footer -->
+    <!-- <footer class="footer">
       <div class="container footer-list">
-        <!-- Footer logo -->
         <div class="fooret-logo">
           <a class="footer-logo-link link" href="./index.html"
             ><span>Web</span>Studio</a
@@ -388,7 +382,6 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <!-- Footer social -->
         <div class="social">
           <p class="social-title">Social media</p>
           <ul class="social-list link list">
@@ -432,7 +425,6 @@
               name="subs"
               placeholder="E-mail"
             />
-
             <button class="subscribe-button" type="submit">
               Subscribe
               <svg class="button-svg" width="24" height="24">
@@ -442,7 +434,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- MODAL -->
 
