--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 
       <!-- Features -->
 
+      <div></div>
+
       <section class="section-features">
         <div class="container">
           <h2 class="visually-hidden">features</h2>
