--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
       <!-- Doing -->
 
-      <!-- <section class="section-doing">
+      <section class="section-doing">
         <div class="container">
           <h2 class="section-doing-title">What are we doing</h2>
           <ul class="section-doing-list list">
@@ -143,11 +143,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Team -->
 
-      <!-- <section class="section-team">
+      <section class="section-team">
         <div class="container">
           <h2 class="section-team-title">Our Team</h2>
           <ul class="section-team-list list">
@@ -315,11 +315,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Customers -->
 
-      <!-- <section class="section-customers">
+      <section class="section-customers">
         <div class="container">
           <h2 class="section-customers-title">Customers</h2>
           <ul class="section-customers-list link list">
@@ -367,7 +367,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- Footer -->
