--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container main-header">
         <nav class="header-navigation main-header">
           <a class="header-logo link" href="./index.html"
@@ -58,7 +58,7 @@
           </ul>
         </address>
       </div>
-    </header> -->
+    </header>
     <main>
       <!-- Hero -->
 
@@ -371,49 +371,51 @@
     </main>
 
     <!-- Footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-list">
-        <div class="fooret-logo">
-          <a class="footer-logo-link link" href="./index.html"
-            ><span>Web</span>Studio</a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="social">
-          <p class="social-title">Social media</p>
-          <ul class="social-list link list">
-            <li class="social-item">
-              <a href="" class="social-link link">
-                <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a href="" class="social-link link">
-                <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a href="" class="social-link link">
-                <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a href="" class="social-link link">
-                <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="footer-tablet">
+          <div class="fooret-logo">
+            <a class="footer-logo-link link" href="./index.html"
+              ><span>Web</span>Studio</a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="social">
+            <p class="social-title">Social media</p>
+            <ul class="social-list link list">
+              <li class="social-item">
+                <a href="" class="social-link link">
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="" class="social-link link">
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="" class="social-link link">
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="" class="social-link link">
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="subscribe-footer">
           <p class="subscribe-label">Subscribe</p>
@@ -434,7 +436,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- MODAL -->
 
@@ -502,7 +504,7 @@
                 ><svg class="checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-vector-check"></use>
                 </svg> </span
-              >I accept the terms and conditions of thes&nbsp;
+              >I accept the terms and conditions of the&nbsp;
             </label>
             <a class="pr-policy" href="">Privacy Policy</a>
           </div>
