--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,9 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container main-header">
-        <!-- Navigation -->
-
+      
         <nav class="header-navigation main-header">
           <a class="header-logo link" href="./index.html"
             ><span>Web</span>Studio</a
@@ -46,8 +45,6 @@
           </ul>
         </nav>
 
-        <!-- Address -->
-
         <address class="header-address">
           <ul class="header-address-list list">
             <li class="header-address-item">
@@ -65,13 +62,11 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
       <section class="portfolio">
         <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
-
-          <!-- Buttons  -->
 
           <ul class="btn-list list">
             <li class="btn-item">
@@ -90,8 +85,6 @@
               <button class="btn" type="button">Marketing</button>
             </li>
           </ul>
-
-          <!-- Portfolio -->
 
           <ul class="portfolio-list list">
             <li class="portfolio-item">
@@ -288,73 +281,67 @@
       </section>
     </main>
     <footer class="footer">
-      <!-- Footer -->
-
       <div class="container footer-list">
-        <!-- Footer logo -->
-        <div class="fooret-logo">
-          <a class="footer-logo-link link" href="./index.html"
-            ><span>Web</span>Studio</a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <!-- Footer social -->
-        <div class="social">
-          <h2 class="social-title">Social media</h2>
-          <ul class="social-list link list">
-            <li class="social-item">
-              <a href="" class="social-link link">
-                <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a href="" class="social-link link">
-                <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a href="" class="social-link link">
-                <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a href="" class="social-link link">
-                <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="footer-tablet">
+          <div class="fooret-logo">
+            <a class="footer-logo-link link" href="./index.html"
+              ><span>Web</span>Studio</a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="social">
+            <p class="social-title">Social media</p>
+            <ul class="social-list link list">
+              <li class="social-item">
+                <a href="" class="social-link link">
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="" class="social-link link">
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="" class="social-link link">
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="" class="social-link link">
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="subscribe-footer">
           <p class="subscribe-label">Subscribe</p>
           <form class="subscribe-form">
-            <div class="subscribe-field">
-              <!-- <label class="subscribe-label" for="subs">Subscribe</label> -->
-              <input
-                class="subscribe-input"
-                type="email"
-                id="subs"
-                name="subs"
-                placeholder="E-mail"
-              />
-
-              <button class="subscribe-button" type="submit">
-                Subscribe
-                <svg class="button-svg" width="24" height="24">
-                  <use href="./images/icons.svg#icon-Frame-3"></use>
-                </svg>
-              </button>
-            </div>
+            <input
+              class="subscribe-input"
+              type="email"
+              id="subs"
+              name="subs"
+              placeholder="E-mail"
+            />
+            <button class="subscribe-button" type="submit">
+              Subscribe
+              <svg class="button-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
