--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="menu-open">
+          <svg class="icon-menu-open" width="32" height="22">
+            <use href="./images/icons.svg#menu-open"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
