--- a/index.html
+++ b/index.html
@@ -57,11 +57,87 @@
             </li>
           </ul>
         </address>
-        <button type="button" class="menu-open">
+        <button type="button" class="menu-open" data-menu-open>
           <svg class="icon-menu-open" width="32" height="22">
-            <use href="./images/icons.svg#menu-open"></use>
+            <use href="./images/icons.svg#icon-menu-open"></use>
           </svg>
         </button>
+      </div>
+      <div class="mob-menu is-hidden" data-menu>
+        <div class="container">
+          <div>
+            <button type="button" class="menu-close" data-menu-close>
+              <svg class="modal-icon" width="8" height="8">
+                <use href="./images/icons.svg#a"></use>
+              </svg>
+            </button>
+            <ul class="mob-menu-list list">
+              <li class="mob-menu-item">
+                <a
+                  class="mob-menu-link link carrent text-color"
+                  href="./index.html"
+                  >Studio</a
+                >
+              </li>
+              <li class="mob-menu-item">
+                <a class="mob-menu-link link" href="./portfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="mob-menu-item">
+                <a class="mob-menu-link link" href="">Contacts</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <address class="mob-menu-address">
+              <ul class="mob-menu-address-list list">
+                <li class="mob-menu-address-tel-item">
+                  <a
+                    class="mob-menu-address-tel-link link"
+                    href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+                <li class="mob-menu-address-item">
+                  <a
+                    class="mob-menu-address-link link"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+            </address>
+            <ul class="mob-menu-icon-list link list">
+              <li class="section-team-icon-item">
+                <a href="" class="section-team-icon-link link">
+                  <svg class="section-team-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="section-team-icon-item">
+                <a href="" class="section-team-icon-link link">
+                  <svg class="section-team-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="section-team-icon-item">
+                <a href="" class="section-team-icon-link link"
+                  ><svg class="section-team-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use></svg
+                ></a>
+              </li>
+              <li class="section-team-icon-item">
+                <a href="" class="section-team-icon-link link"
+                  ><svg class="section-team-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use></svg
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <main>
@@ -518,5 +594,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
