--- a/portfolio.html
+++ b/portfolio.html
@@ -21,9 +21,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container main-header">
-      
         <nav class="header-navigation main-header">
           <a class="header-logo link" href="./index.html"
             ><span>Web</span>Studio</a
@@ -62,7 +61,7 @@
           </ul>
         </address>
       </div>
-    </header> -->
+    </header>
     <main>
       <section class="portfolio">
         <div class="container">
