--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
           </ul>
         </address>
         <button type="button" class="menu-open" data-menu-open>
-          <svg class="icon-menu-open" width="32" height="22">
-            <use href="./images/icons.svg#icon-menu-open"></use>
-          </svg>
+          <!-- <svg class="icon-menu-open" width="32" height="22">
+            <use href="./images/charm_menu-hamburger.svg"></use>
+          </svg> -->
         </button>
       </div>
       <div class="mob-menu is-hidden" data-menu>
@@ -200,6 +200,7 @@
           <ul class="section-doing-list list">
             <li class="section-doing-item">
               <img
+                srcset="./images/pc.jpg 1x, ./images/pc2x.jpg 2x"
                 class="section-doing-img"
                 src="./images/pc.jpg"
                 alt="PC"
@@ -208,6 +209,7 @@
             </li>
             <li class="section-doing-item">
               <img
+                srcset="./images/phone.jpg 1x, ./images/phone2x.jpg 2x"
                 class="section-doing-img"
                 src="./images/phone.jpg"
                 alt="phone"
@@ -216,6 +218,7 @@
             </li>
             <li class="section-doing-item">
               <img
+                srcset="./images/nb.jpg 1x, ./images/nb2x.jpg 2x"
                 class="section-doing-img"
                 src="./images/nb.jpg"
                 alt="nbphone"
@@ -234,6 +237,7 @@
           <ul class="section-team-list list">
             <li class="section-team-item">
               <img
+                srcset="./images/Mark.jpg 1x, ./images/Mark2x.jpg 2x"
                 class="section-team-img"
                 src="./images/Mark.jpg"
                 alt="man"
@@ -274,6 +278,7 @@
             </li>
             <li class="section-team-item">
               <img
+                srcset="./images/Tom.jpg 1x, ./images/Tom2x.jpg 2x"
                 class="main-section-team-img"
                 src="./images/Tom.jpg"
                 alt="man"
@@ -314,6 +319,7 @@
             </li>
             <li class="section-team-item">
               <img
+                srcset="./images/Camilla.jpg 1x, ./images/Camilla2x.jpg 2x"
                 class="section-team-img"
                 src="./images/Camilla.jpg"
                 alt="woman"
@@ -354,6 +360,7 @@
             </li>
             <li class="section-team-item">
               <img
+                srcset="./images/Daniel.jpg 1x, ./images/Daniel2x.jpg 2x"
                 class="section-team-img"
                 src="./images/Daniel.jpg"
                 alt="man"
