--- a/portfolio.html
+++ b/portfolio.html
@@ -60,6 +60,83 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="menu-open" data-menu-open></button>
+      </div>
+      <div class="mob-menu is-hidden" data-menu>
+        <div class="container">
+          <div>
+            <button type="button" class="menu-close" data-menu-close>
+              <svg class="modal-icon" width="8" height="8">
+                <use href="./images/icons.svg#a"></use>
+              </svg>
+            </button>
+            <ul class="mob-menu-list list">
+              <li class="mob-menu-item">
+                <a
+                  class="mob-menu-link link carrent text-color"
+                  href="./index.html"
+                  >Studio</a
+                >
+              </li>
+              <li class="mob-menu-item">
+                <a class="mob-menu-link link" href="./portfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="mob-menu-item">
+                <a class="mob-menu-link link" href="">Contacts</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <address class="mob-menu-address">
+              <ul class="mob-menu-address-list list">
+                <li class="mob-menu-address-tel-item">
+                  <a
+                    class="mob-menu-address-tel-link link"
+                    href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+                <li class="mob-menu-address-item">
+                  <a
+                    class="mob-menu-address-link link"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+            </address>
+            <ul class="mob-menu-icon-list link list">
+              <li class="section-team-icon-item">
+                <a href="" class="section-team-icon-link link">
+                  <svg class="section-team-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="section-team-icon-item">
+                <a href="" class="section-team-icon-link link">
+                  <svg class="section-team-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="section-team-icon-item">
+                <a href="" class="section-team-icon-link link"
+                  ><svg class="section-team-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use></svg
+                ></a>
+              </li>
+              <li class="section-team-icon-item">
+                <a href="" class="section-team-icon-link link"
+                  ><svg class="section-team-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use></svg
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <main>
@@ -90,6 +167,7 @@
               <a class="portfolio-link link" href="">
                 <div class="animation">
                   <img
+                    srcset="./images/Web.jpg 1x, ./images/Web2x.jpg 2x"
                     class="portfolio-img"
                     src="./images/Web.jpg"
                     alt="bankapp"
@@ -111,6 +189,7 @@
               <a class="portfolio-link link" href="">
                 <div class="animation">
                   <img
+                    srcset="./images/iphone.jpg 1x, ./images/iphone2x.jpg 2x"
                     class="portfolio-img"
                     src="./images/iphone.jpg"
                     alt="iphone"
@@ -132,6 +211,10 @@
               <a class="portfolio-link link" href="">
                 <div class="animation">
                   <img
+                    srcset="
+                      ./images/noteboock.jpg   1x,
+                      ./images/noteboock2x.jpg 2x
+                    "
                     class="portfolio-img"
                     src="./images/noteboock.jpg"
                     alt="macbookiphone"
@@ -153,6 +236,7 @@
               <a class="portfolio-link link" href="">
                 <div class="animation">
                   <img
+                    srcset="./images/auto.jpg 1x, ./images/autopc2x.jpg 2x"
                     class="portfolio-img"
                     src="./images/auto.jpg"
                     alt="auto"
@@ -174,6 +258,7 @@
               <a class="portfolio-link link" href="">
                 <div class="animation">
                   <img
+                    srcset="./images/moon.jpg 1x, ./images/moon2x.jpg 2x"
                     class="portfolio-img"
                     src="./images/moon.jpg"
                     alt="moon"
@@ -195,6 +280,7 @@
               <a class="portfolio-link link" href="">
                 <div class="animation">
                   <img
+                    srcset="./images/girl.jpg 1x, ./images/girl2x.jpg 2x"
                     class="portfolio-img"
                     src="./images/girl.jpg"
                     alt="girl"
@@ -216,6 +302,7 @@
               <a class="portfolio-link link" href="">
                 <div class="animation">
                   <img
+                    srcset="./images/make.jpg 1x, ./images/make2x.jpg 2x"
                     class="portfolio-img"
                     src="./images/make.jpg"
                     alt="makeup"
@@ -237,6 +324,7 @@
               <a class="portfolio-link link" href="">
                 <div class="animation">
                   <img
+                    srcset="./images/food.jpg 1x, ./images/food2x.jpg 2x"
                     class="portfolio-img"
                     src="./images/food.jpg"
                     alt="food"
@@ -258,6 +346,7 @@
               <a class="portfolio-link link" href="">
                 <div class="animation">
                   <img
+                    srcset="./images/cofe.jpg 1x, ./images/cofe2x.jpg 2x"
                     class="portfolio-img"
                     src="./images/cofe.jpg"
                     alt="cofe"
@@ -345,5 +434,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
